--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 .DS_Store
 /.build
 /Packages
-/*.xcodeproj
+
+PokePartyShared.xcodeproj/project.xcworkspace/xcuserdata
+PokePartyShared.xcodeproj/xcuserdata
